apps/storage/longhorn/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    gethomepage.dev/href: "https://longhorn.cloud.obara.xyz"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Longhorn"
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - longhorn.cloud.obara.xyz
  rules:
    - backendRefs:
        - name: oauth2-proxy-longhorn
          namespace: oauth2-proxy
          port: 80
